k8s/apps/cilium/manifests/cilium.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-http
  namespace: gateway-system
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
spec:
  gatewayClassName: cilium
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.xako.net"
    tls:
      mode: Terminate
      certificateRefs:
      - name: xako-net-tls
    allowedRoutes:
      namespaces:
        from: All
